--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
           <br />
           <p>
             Je m’appelle Marie-Laure , je suis
-            <strong>assistante maternelle</strong> depuis Mai 2008 (agrée par le
-            ministère des armées) <br />
+            <strong>assistante maternelle</strong> depuis Mai 2008 (agréée par
+            le ministère des armées) <br />
             <br />
             <img src="imgHome.png" alt="Logo Maison" height="30" width="30" />
             <span>- Habite <strong>Mios</strong></span> <br />
