retrait ptovisoire de la video de noel

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <h3>Notre année 2021 en images et en musique</h3>
           <video
             class="videonoel"
-            src="noelvideo.mp4"
+            src=""
             height="700"
             width="700"
             autoplay
