--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="photoBaby.png" />
     <meta
       name="description"
-      content="Assistante maternelle agréée depuis plus de 13 ans sur la commune du Mios proche du Leclerc, je dispose d’une chambre individuelle par enfant ainsi que d’une salle de jeux. Nous adorons les balades, les activités culinaires ainsi que les activités sensorielles; alors si tu aimes notre programme, demande à ta maman de contacter Nounou .￼"
+      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur la commune du Mios proche du Leclerc, je dispose d’une chambre individuelle par enfant ainsi que d’une salle de jeux. Nous adorons les balades, les activités culinaires ainsi que les activités sensorielles; alors si tu aimes notre programme, demande à ta maman de contacter Nounou .￼"
     />
   </head>
   <body>
@@ -91,7 +91,7 @@
     <main>
       <div class="container-fluid">
         <div class="fixed">
-          <h1>Marie-Laure Baleste, assistante maternelle agréée</h1>
+          <h1>Marie-Laure Baleste, assistante maternelle (Nounou) agréée</h1>
           <br /><br />
           <a class="tel" href="tel:+33670719537">06 70 71 95 37 </a>
           <br />
@@ -286,13 +286,13 @@
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
-          ></iframe>
+            name="Google maps"
+            ></iframe
+          >
         </div>
       </div>
       <a class="btn btnLink" href="#" role="button">Retour</a>
     </main>
-    <a class="btn btnLink" href="#" role="button">Retour</a>
-    <footer>
       <div class="row">
         <div class="col footer sign">
           <p>© nounoumios 2021 - Mentions légales</p>
