--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="none" />
+    <meta name="google-site-verification" content="1-U1XwhX2JF2SZs5--RuR7sVO_RDzFgoXIa1goNSiQ4" />
     <title>
       Nounou Mios. Assistante maternelle agréée sur la commune de Mios(33380)
     </title>
