--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta name="robots" content="all" />
     <meta name="google-site-verification" content="1-U1XwhX2JF2SZs5--RuR7sVO_RDzFgoXIa1goNSiQ4" />
     <title>
-      Nounou Mios. Assistante maternelle agréée sur la commune de Mios(33380)
+    Assistante maternelle (Nounou) agréée sur la commune de Mios (33380)
     </title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="photoBaby.png" />
     <meta
       name="description"
-      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur la commune du Mios proche du Leclerc, je dispose d’une chambre individuelle par enfant ainsi que d’une salle de jeux. Nous adorons les balades, les activités culinaires ainsi que les activités sensorielles; alors si tu aimes notre programme, demande à ta maman de contacter Nounou .￼"
-    />
+      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux.
   </head>
   <body>
     <div class="container-fluid">
