--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="all" />
     <meta name="google-site-verification" content="1-U1XwhX2JF2SZs5--RuR7sVO_RDzFgoXIa1goNSiQ4" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png" /> <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png" />
     <title>
-    Assistante maternelle (Nounou) agréée sur la commune de Mios (33380)
+    Assistante maternelle (Nounou) agréée sur Mios (33380)
     </title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
     <link rel="stylesheet" href="./style.css" />
@@ -283,7 +284,6 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7468.754561554868!2d-0.9327552770234651!3d44.618411906334316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5493640746690d%3A0x2e2207c9f0affb60!2s22%20Rue%20de%20Beneau%2C%2033380%20Mios!5e0!3m2!1sfr!2sfr!4v1638877156167!5m2!1sfr!2sfr"
             width="700px"
             height="450px"
-            style="border: 0"
             allowfullscreen=""
             loading="lazy"
             name="Google maps"
