--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <link rel="shortcut icon" href="photoBaby.png" />
     <meta
       name="description"
-      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux.
+      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux." />
   </head>
   <body>
     <div class="container-fluid">
       <header>
-        <!--Navbar-->
         <div class="row">
           <nav class="navbar navbar-light navbar-expand-xl fixed-top">
             <img
@@ -318,3 +317,4 @@
     ></script>
   </body>
 </html>
+
