--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="all" />
+
     <meta
       name="google-site-verification"
       content="1-U1XwhX2JF2SZs5--RuR7sVO_RDzFgoXIa1goNSiQ4"
@@ -12,12 +13,12 @@
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="/apple-touch-icon-120x120-precomposed.png"
+      href="apple-touch-icon-120x120-precomposed.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="/apple-touch-icon-152x152-precomposed.png"
+      href="./apple-touch-icon-152x152-precomposed.png"
     />
     <title>Assistante maternelle (Nounou) agréée sur Mios (33380)</title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
@@ -25,7 +26,7 @@
     <link rel="shortcut icon" href="photoBaby.png" />
     <meta
       name="description"
-      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux."
+      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux. Au programme ateleliers cuisine, balades, activités motrice et sensorielles et plein d'autres surprises. "
     />
   </head>
   <body>
