--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="all" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://nounoumios.com/index.html" />
 
     <meta
       name="google-site-verification"
@@ -26,7 +27,8 @@
     <link rel="shortcut icon" href="photoBaby.png" />
     <meta
       name="description"
-      content="Assistante maternelle (Nounou) agréée depuis plus de 13 ans sur Mios. Une chambre par enfant et une salle de jeux. Au programme ateleliers cuisine, balades, activités motrice et sensorielles et plein d'autres surprises. "
+      content="Assistante maternelle (Nounou) agréée
+    depuis 13 ans sur Mios. Une chambre par enfant et une salle de jeux. Ateliers cuisine, balades, activités motrices et sensorielles..."
     />
   </head>
   <body>
