--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
           <span>S</span>
         </div>
         <div id="div1">
+          <div class="dispo">
+            <p>Une place de disponible tous les vendredis</p>
+            <br />
+            <p>
+              Une autre place disponible pour une journée par semaine (jour non
+              défini)
+            </p>
+          </div>
+
           <h2 id="quiJeSuis">Qui je suis ?</h2>
           <br />
           <br />
@@ -283,7 +292,7 @@
           <h3>Notre année 2021 en images et en musique</h3>
           <video
             class="videonoel"
-            src=""
+            src="./noelvideo.mp4"
             height="700"
             width="700"
             autoplay
