--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 <li class="nav-item">
                   <a href="#nousTrouver" class="nav-link">Nous touver</a>
                 </li>
+                <li class="nav-item">
+                  <a href="#tarifs" class="nav-link">Tarifs</a>
+                </li>
               </ul>
               <a
                 href="https://www.facebook.com/marielaure.baleste.399"
@@ -151,7 +154,7 @@
               défini)
             </p>
           </div>
-
+<div>
           <h2 id="quiJeSuis">Qui je suis ?</h2>
           <br />
           <br />
@@ -302,6 +305,45 @@
           <a class="btn btnLink" href="#" role="button">Retour</a>
           <br />
           <br />
+          <h2 id="tarifs">Tarifs</h2>
+          <br />
+          <br />
+          <table>
+            <tbody>
+              <tr>
+                <td>&nbsp;</td>
+                <td class="année">&nbsp;Année complète</td>
+                <td class="année">&nbsp;-2 semaines</td>
+                <td class="année">&nbsp;-4 semaines</td>
+                <td class="année">&nbsp;-6 semaines</td>
+              </tr>
+              <tr>
+                <td class="heures">Moins de 30h par semaine</td>
+                <td class="prix">&nbsp;4 €</td>
+                <td class="prix">&nbsp;4.20 €</td>
+                <td class="prix">&nbsp;4.40 €</td>
+                <td class="prix">&nbsp;4.60 €</td>
+              </tr>
+              <tr>
+                <td class="heures">De 30 à 35h par semaine&nbsp;</td>
+                <td class="prix">&nbsp;3.50 €</td>
+                <td class="prix">&nbsp;3.70 €</td>
+                <td class="prix">&nbsp;3.90 €</td>
+                <td class="prix">&nbsp;3.10 €</td>
+              </tr>
+              <tr>
+                <td class="heures">&nbsp;Plus de 35h par semaine</td>
+                <td class="prix">&nbsp;3.20 €</td>
+                <td class="prix">&nbsp;3.40 €</td>
+                <td class="prix">&nbsp;3.60 €</td>
+                <td class="prix">&nbsp;3.90 €</td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="caf">Différentes aides sont prévues pour vous aider à financer la garde de votre petit bout...</p>
+           <a class="cafLien" href="https://www.caf.fr/allocataires/droits-et-prestations/s-informer-sur-les-aides/petite-enfance/le-complement-de-libre-choix-du-mode-de-garde" target="_blank">Se renseigner sur les aides de la Caf</a>
+           <br>
+           <br>
           <h2 id="nousTrouver">Nous trouver</h2>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7468.754561554868!2d-0.9327552770234651!3d44.618411906334316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5493640746690d%3A0x2e2207c9f0affb60!2s22%20Rue%20de%20Beneau%2C%2033380%20Mios!5e0!3m2!1sfr!2sfr!4v1638877156167!5m2!1sfr!2sfr"
