--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
               défini)
             </p>
           </div>
+          <br />
           <h2 id="quiJeSuis">Qui je suis ?</h2>
           <br />
           <br />
@@ -310,7 +311,7 @@
           <table>
             <tbody>
               <tr>
-                <td>&nbsp;</td>
+                <td class="tarifNet">&nbsp;* Tarifs net</td>
                 <td class="année">&nbsp;Année complète</td>
                 <td class="année">&nbsp;-2 semaines</td>
                 <td class="année">&nbsp;-4 semaines</td>
