--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h2 id="quiJeSuis">Qui je suis ?</h2>
           <br />
           <br />
-          <p>
+          <p class="text">
             Je m’appelle Marie-Laure , je suis
             <strong>assistante maternelle</strong> depuis Mai 2008 (agréée par
             le ministère des armées) <br />
@@ -288,7 +288,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <a class="btn btnLink" href="#" role="button">Retour</a>
           <br />
           <br />
           <h2 id="nosActivités">Nos activités</h2>
@@ -302,7 +301,6 @@
             muted
             controls
           ></video>
-          <a class="btn btnLink" href="#" role="button">Retour</a>
           <br />
           <br />
           <h2 id="tarifs">Tarifs</h2>
