--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://nounoumios.com/index.html" />
+    <link rel="canonical" href="https://www.nounoumios.com" />
 
     <meta
       name="google-site-verification"
@@ -303,13 +303,47 @@
           ></video>
           <br />
           <br />
+          <div>
+            <p class="mesLoisirs">
+              Il n'y a pas de journée type (car heureusement il n'y a pas
+              d'enfant type...) <br />
+              Je laisse beaucoup la place au jeu libre. <br />
+              <br />
+              Néanmoins, je propose différentes activités tout au long de
+              l'année : (Janvier: Galette, Février: Chandeleur et
+              Saint-Valentin, Mars: Mardi-gras, Avril: Poisson d'avril, Mai:
+              Muguet, Juin: Fête de la musique, Juillet: Fête nationale,
+              Aout:Vacances, Septembre: Rentrée des classes, Octobre: Automne,
+              Novembre: Halloween, et enfin Décembre: Noel.) <br />
+              <br />
+              - Je cuisine avec les enfants pour leur apprendre le goût, les
+              couleurs, les textures.
+              <br />
+              - Je travaille la motricité fine (savoir utiliser ses mains en
+              toutes circonstances), grâce a des jeux d'adresse. <br />
+              - Je travaille également la motricité sensorielle, pour bien
+              développer ses cinq sens . <br />
+              - Au moins un atelier gymnastique par semaine. <br />
+              - Nous faisons également beaucoup de balades au grand air et nous
+              en profitons pour ramener des trésors avec lesquels nous pouvons
+              nous amuser et nous eveiller. (pommes de pin, cailloux, fleurs,
+              feuilles...) <br />
+              - Nous allons beaucoup à l'aire de jeux qui se situe à 400m de la
+              maison. <br />
+              <br />
+              Pour toutes ces activités je favorise le recyclage (papier
+              toilette, rouleau essuie tout, boîtes en carton, boîtes en
+              plastique, boîtes en métal, tout se recycle...
+            </p>
+          </div>
+
           <h2 id="tarifs">Tarifs</h2>
           <br />
           <br />
           <table>
             <tbody>
               <tr>
-                <td class="tarifNet">&nbsp;* Tarifs net</td>
+                <td class="tarifNet">&nbsp;* Tarif net</td>
                 <td class="année">&nbsp;Année complète</td>
                 <td class="année">&nbsp;-2 semaines</td>
                 <td class="année">&nbsp;-4 semaines</td>
@@ -361,7 +395,6 @@
           ></iframe>
         </div>
       </div>
-      <a class="btn btnLink" href="#" role="button">Retour</a>
     </main>
     <footer>
       <div class="row">
