--- a/index.html
+++ b/index.html
@@ -322,17 +322,17 @@
               - Je travaille la motricité fine (savoir utiliser ses mains en
               toutes circonstances), grâce a des jeux d'adresse. <br />
               - Je travaille également la motricité sensorielle, pour bien
-              développer ses cinq sens . <br />
+              développer leur cinq sens . <br />
               - Au moins un atelier gymnastique par semaine. <br />
               - Nous faisons également beaucoup de balades au grand air et nous
               en profitons pour ramener des trésors avec lesquels nous pouvons
-              nous amuser et nous eveiller. (pommes de pin, cailloux, fleurs,
+              nous amuser et nous éveiller (pommes de pin, cailloux, fleurs,
               feuilles...) <br />
               - Nous allons beaucoup à l'aire de jeux qui se situe à 400m de la
               maison. <br />
               <br />
               Pour toutes ces activités je favorise le recyclage (papier
-              toilette, rouleau essuie tout, boîtes en carton, boîtes en
+              toilette, rouleaux essuie tout, boîtes en carton, boîtes en
               plastique, boîtes en métal, tout se recycle...
             </p>
           </div>
