--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@
               alt="Mariés"
               height="30"
               width="30"
-            /><span> - Mariée deux enfants( 18 et 16 ans)</span>
+            /><span> - Mariée deux enfants( 18 et 16 ans)</span> <br />
+            <img
+              src="./no-smoking.png"
+              alt="No smoking"
+              height="30"
+              width="30"
+            />
+            <span>-Non fumeuse </span> <br />
             <br />
             <br />
             J’ai gardé 38 loulous depuis mes debuts en 2008 😀 <br />
