--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       <div class="container-fluid">
         <div class="fixed">
           <h1>Marie-Laure Baleste, assistante maternelle (Nounou) agréée</h1>
+          <p><em>"Partage, échanges, complicité"</em></p>
           <br /><br />
           <a class="tel" href="tel:+33670719537">06 70 71 95 37 </a>
           <br />
