--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p class="text">
             Je m’appelle Marie-Laure , je suis
             <strong>assistante maternelle</strong> depuis Mai 2008 (agréée par
-            le ministère des armées) <br />
+            le ministère des armées). <br />
             <br />
             <img src="imgHome.png" alt="Logo Maison" height="30" width="30" />
             <span>- Habite <strong>Mios</strong></span> <br />
@@ -171,7 +171,7 @@
               alt="Mariés"
               height="30"
               width="30"
-            /><span> - Mariée deux enfants( 18 et 16 ans)</span> <br />
+            /><span> - Mariée deux enfants (18 et 16 ans)</span> <br />
             <img
               src="./no-smoking.png"
               alt="No smoking"
@@ -181,16 +181,16 @@
             <span>-Non fumeuse </span> <br />
             <br />
             <br />
-            J’ai gardé 38 loulous depuis mes debuts en 2008 😀 <br />
+            J’ai gardé 38 loulous depuis mes debuts en 2008 😀💪 <br />
             Je favorise le <em>jeu libre</em> et la <em>bienveillance.</em>
             <br />
             J’adore les
             <em
-              >ateliers cuisine, les ballades, les activités motrices ainsi que
+              >ateliers cuisine, les balades, les activités motrices ainsi que
               sensorielles.</em
             >
             <br />
-            J’habite une maison de 130m2 ou chaque loulou a sa chambre et son
+            J’habite une maison de 130m2 où chaque loulou a sa chambre et son
             indépendance. <br />
             Je dispose aussi d’une aire de jeu cloturée et adaptée à l’âge des
             enfants. <br />
