--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               height="30"
               width="30"
             />
-            <span>-Non fumeuse </span> <br />
+            <span>- Non fumeuse </span> <br />
             <br />
             <br />
             J’ai gardé 38 loulous depuis mes debuts en 2008 😀💪 <br />
@@ -328,7 +328,7 @@
               couleurs, les textures.
               <br />
               - Je travaille la motricité fine (savoir utiliser ses mains en
-              toutes circonstances), grâce a des jeux d'adresse. <br />
+              toutes circonstances), grâce à des jeux d'adresse. <br />
               - Je travaille également la motricité sensorielle, pour bien
               développer leur cinq sens . <br />
               - Au moins un atelier gymnastique par semaine. <br />
