--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 target="_blank"
                 title="Facebook"
                 class="icons"
+                rel="noopener"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -388,6 +389,7 @@
             class="cafLien"
             href="https://www.caf.fr/allocataires/droits-et-prestations/s-informer-sur-les-aides/petite-enfance/le-complement-de-libre-choix-du-mode-de-garde"
             target="_blank"
+            rel="noopener"
             >Se renseigner sur les aides de la Caf</a
           >
           <br />
@@ -405,11 +407,14 @@
       </div>
     </main>
     <footer>
-      <div class="row">
-        <div class="col footer sign">
+      <div class="container">
+        <div class="row footer sign">
           <p>© nounoumios 2021 - Mentions légales</p>
           <p>
-            <a href="https://github.com/MarianeStudi" target="_blank"
+            <a
+              href="https://github.com/MarianeStudi"
+              target="_blank"
+              rel="noopener"
               >Made with ❤️ by Mariane Landelle</a
             >
           </p>
