--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       </div>
     </main>
     <footer>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row footer sign">
           <p>© nounoumios 2021 - Mentions légales</p>
           <p>
