--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@
         </div>
         <div class="imgbaby">
           <img
+            class="imgbabysmall"
             src="photoBaby.png"
             alt="Image dessin animé d'un bébé"
             height="150"
             width="150"
           />
           <img
+            class="imgbabysmall"
             src="photoNounou.jpeg"
             alt="Photo dessin animé de Marie-Laure Baleste"
             height="150"
