--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
       </div>
     </main>
     <footer>
-      <div class="container-fluid">
-        <div class="row footer sign">
+        <div class="footer sign">
           <p>© nounoumios 2021 - Mentions légales</p>
           <p>
             <a
