--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <br /><br />
           <a class="tel" href="tel:+33670719537">06 70 71 95 37 </a>
           <br />
-          <a class="mail" href="mailto:marielaure.baleste@orange.fr"
-            >marielaure.baleste@orange.fr</a
+          <a class="mail" href="mailto:marie-laure.baleste@orange.fr"
+            >marie-laure.baleste@orange.fr</a
           >
         </div>
         <div class="imgbaby">
