--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h1>Marie-Laure Baleste, assistante maternelle (Nounou) agréée</h1>
           <p><em>"Partage, échanges, complicité"</em></p>
           <br /><br />
-          <a class="tel" href="tel:+33670719537">06 70 71 95 37 </a>
+          <a class="tel" href="tel:+33670719537"> Me contacter 📱</a>
           <br />
           <a class="mail" href="mailto:marie-laure.baleste@orange.fr"
             >marie-laure.baleste@orange.fr</a
